--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,8 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - DEV=false
     ports:
       - "3123:3123"
-    entrypoint: ["node", l"dist/index.js"]
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    entrypoint: ["node", "dist/index.js"]
