Cleanup the AI gibberish from the md documents.. Add Pexels API key as a pre requisite

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PEXELS_API_KEY=
-LOG_LEVEL= # trace, debug, info, warn, error, fatal, silent
-WHISPER_VERBOSE=false
+PEXELS_API_KEY= # crucial for the project to work
+LOG_LEVEL=trace # trace, debug, info, warn, error, fatal, silent
+WHISPER_VERBOSE=true
 PORT=3123
-DEV=false
+DEV=true # local development mode
+DATA_DIR_PATH= # only for docker, otherwise leave empty
