--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "short-video-maker",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Creates short videos for TikTok, Instagram Reels, and YouTube Shorts using the Model Context Protocol (MCP) and a REST API.",
   "main": "index.js",
   "bugs": "https://github.com/gyoridavid/short-video-maker/issues",
   "homepage": "https://github.com/gyoridavid/short-video-maker",
   "scripts": {
     "build": "rimraf dist && tsc",
+    "dev": "node --watch -r ts-node/register src/index.ts",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build && echo \"#!/usr/bin/env node\n$(cat dist/index.js)\" > dist/index.js && chmod +x dist/index.js"
@@ -72,6 +73,7 @@
     "eslint": "^9.24.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vitest": "^3.1.1"
   }
